[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
version = "1.0"
description = "Python Lexer System"
authors = [{ name = "Ilya Shamatula", email = "shamatulailya@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "exceptiongroup==1.2.2",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest==8.3.4",
    "tomli==2.2.1"
]

[project.scripts]
pyls = "pyls.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pyls = ["file_system_structures/*"]